Get de pedido corrigido e mudanças na geração de mocks